PS-778: FHIR updates

--- a/product/fhir-data.mdx
+++ b/product/fhir-data.mdx
@@ -6,11 +6,13 @@ icon: 'fire-flame-curved'
 
 # Basics
 
-For customers interested in the structured dataset underpinning our product suite (Care Summary, Risk Adjustment, and Quality Gap Closure), Connective Health offers a FHIR data product. The dataset is deduplicated, normalized, and curated using best-in-class data cleansing, with a longer lookback period. In some cases, the dataset can stretch back more than twenty years.
+For customers interested in the structured dataset underpinning our product suite (Care Summary, Risk Adjustment, and Quality Gap Closure), Connective Health offers a FHIR data product. The dataset is deduplicated, normalized, and curated using best-in-class data cleansing.
 
 The structure of Connective Health’s FHIR interactions and resources are all based on the [FHIR R4](https://www.hl7.org/fhir/R4/) specification. Whenever possible, the resources will also implement the corresponding [US Core 6.1.0 profile](https://www.hl7.org/fhir/us/core/) and will pass validations.
 
-In the event that the source data does not satisfy FHIR or US Core profile validations, we will still send it, allowing the customer final control over whether to ingest, correct, or disregard the data.
+The curation approach is not one-size-fits-all -- instead, it is targeted and configurable. In cases where recency matters (e.g. encounters), there are time-based limits. In other cases (e.g. chronic diseases, medications), there are clinical rules to filter by relevance. In some cases, the dataset can stretch back more than twenty years -- but only if clinically relevant and "clean".
+
+In the event that the source data does not satisfy FHIR or US Core profile validations, we will generally still send it, allowing the customer final control over whether to ingest, correct, or disregard the data.
 
 
 # Interaction Patterns
@@ -33,25 +35,25 @@ In the event that the source data does not satisfy FHIR or US Core profile valid
 Base element is a [Bundle](https://www.hl7.org/fhir/R4/bundle.html) resource, individual FHIR resources will eventually also be available. All information has been deduplicated, normalized, augmented, and curated prior to inserting into FHIR format.
 
 
-| Resource                                                                              | US Core Profile                                                                                                                                    | Description                                                                                                                                                                            |
-|---------------------------------------------------------------------------------------|----------------------------------------------------------------------------------------------------------------------------------------------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| [Patient](https://www.hl7.org/fhir/R4/patient.html)                                   | [US Core Patient](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-patient.html)                                                       | Based on the patient processing events meaning we do not deduplicate the patient's demographics                                                                                        |
-| [AllergyIntolerance](https://www.hl7.org/fhir/R4/allergyintolerance.html)             | [US Core AllergyIntolerance](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-allergyintolerance.html)                                 | Based on Connective Health's patient summary template                                                                                                                                  |
-| [CarePlan](https://www.hl7.org/fhir/R4/careplan.html)                                 | [US Core CarePlan](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-careplan.html)                                                     | Includes reference to encounter and Based on Connective Health's patient summary template                                                                                              |
-| [Encounter](https://www.hl7.org/fhir/R4/encounter.html)                               | [US Core Encounter](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-encounter.html)                                                   | Based on Connective Health's patient summary template                                                                                                                                  |
-| [Immunization](https://www.hl7.org/fhir/R4/immunization.html)                         | [US Core Immunization](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-immunization.html)                                             | Based on Connective Health's patient summary template. Will not include any immunizations which do not have a date as this is required by FHIR                                         |
-| [Observation](https://www.hl7.org/fhir/R4/observation.html) (Labs)                    | [US Core Diagnositic Report Lab](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-diagnosticreport-lab.html)                           | Includes all labs, not just what is on Connective Health's patient summary template                                                                                                    |
-| [MedicationRequest](https://www.hl7.org/fhir/R4/medicationrequest.html) (Medications) | [US Core MedicationRequest](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-medicationrequest.html)                                   | Includes all medications, not just what is on Connective Health's patient summary template. Will not include a medication if is has neither a code nor a name code as this is required |
-| [DocumentReference](https://www.hl7.org/fhir/R4/documentreference.html) (Notes)       | [US Core DocumentReference](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-documentreference.html)                                   | Includes reference to encounter. Based on Connective Health's patient summary template                                                                                                 |
-| [Condition](https://www.hl7.org/fhir/R4/condition.html) (Problems)                    | [US Core Condition Problems Health Concerns](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-condition-problems-health-concerns.html) | Includes all problems                                                                                                                                                                  |
-| [Procedure](https://www.hl7.org/fhir/R4/procedure.html)                               | [US Core Procedure](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-procedure.html)                                                   | Includes reference to encounter. Based on Connective Health's patient summary template                                                                                                 |
-| [Observation](https://www.hl7.org/fhir/R4/observation.html)                           | [US Core Vital Signs](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-vital-signs.html)                                               | Only the vital signs listed here are currently included in the FHIR bundle                                                                                                             |
-| [Observation](https://www.hl7.org/fhir/R4/observation.html)                           | [US Core BMI](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-bmi.html)                                                               |                                                                                                                                                                                        |
-| [Observation](https://www.hl7.org/fhir/R4/observation.html)                           | [US Core Body Height](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-body-height.html)                                               |                                                                                                                                                                                        |
-| [Observation](https://www.hl7.org/fhir/R4/observation.html)                           | [US Core Body Temperature](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-body-temperature.html)                                     |                                                                                                                                                                                        |
-| [Observation](https://www.hl7.org/fhir/R4/observation.html)                           | [US Core Heart Rate](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-heart-rate.html)                                                 |                                                                                                                                                                                        |
-| [Observation](https://www.hl7.org/fhir/R4/observation.html)                           | [US Core Pulse Oximetry](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-pulse-oximetry.html)                                         |                                                                                                                                                                                        |
-| [Observation](https://www.hl7.org/fhir/R4/observation.html)                           | [US Core Respiratory Rate](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-respiratory-rate.html)                                     |                                                                                                                                                                                        |
-| [Practitioner](https://www.hl7.org/fhir/R4/practitioner.html)                         | [US Core Practitioner](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-practitioner.html)                                             | Only returned as a contained resource                                                                                                                                                  |
-| [Practitioner Role](https://www.hl7.org/fhir/R4/practitionerrole.html)                | [US Core PractitionerRole](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-practitionerrole.html)                                     | Only returned as a contained resource                                                                                                                                                  |
-| [Location](https://www.hl7.org/fhir/R4/location.html)                                 | [US Core Location](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-location.html)                                                     | Only returned as a contained resource                                                                                                                                                  |
+| Resource                                                                              | US Core Profile                                                                                                                                    | Description                                                                                                                                                                                          |
+|---------------------------------------------------------------------------------------|----------------------------------------------------------------------------------------------------------------------------------------------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| [Patient](https://www.hl7.org/fhir/R4/patient.html)                                   | [US Core Patient](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-patient.html)                                                       | Based on the patient processing events, meaning we do not deduplicate the patient's demographics.                                                                                                    |
+| [AllergyIntolerance](https://www.hl7.org/fhir/R4/allergyintolerance.html)             | [US Core AllergyIntolerance](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-allergyintolerance.html)                                 | Based on Connective Health’s patient summary template, which excludes non-clinically relevant content such as "unclassified" allergies.                                                              |
+| [CarePlan](https://www.hl7.org/fhir/R4/careplan.html)                                 | [US Core CarePlan](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-careplan.html)                                                     | Based on Connective Health's patient summary template. Includes reference to encounter.                                                                                                              |
+| [Encounter](https://www.hl7.org/fhir/R4/encounter.html)                               | [US Core Encounter](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-encounter.html)                                                   | Based on Connective Health’s patient summary template, which excludes older and less relevant encounters.                                                                                            |
+| [Immunization](https://www.hl7.org/fhir/R4/immunization.html)                         | [US Core Immunization](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-immunization.html)                                             | Based on Connective Health’s patient summary template. Excludes immunizations with no date, due to FHIR requirements.                                                                                |
+| [Observation](https://www.hl7.org/fhir/R4/observation.html) (Labs)                    | [US Core Diagnositic Report Lab](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-diagnosticreport-lab.html)                           | Includes all historical labs, not just what is on Connective Health’s patient summary template.                                                                                                      |
+| [MedicationRequest](https://www.hl7.org/fhir/R4/medicationrequest.html) (Medications) | [US Core MedicationRequest](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-medicationrequest.html)                                   | Includes all historical medications, not just what is on Connective Health’s patient summary template. Excludes medications with neither a code nor a name code, due to FHIR requirements.           |
+| [DocumentReference](https://www.hl7.org/fhir/R4/documentreference.html) (Notes)       | [US Core DocumentReference](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-documentreference.html)                                   | Includes reference to encounter. Configurable to show all historical notes or just those associated with an encounter on the PDF. If the latter, the notes truncation feature is enabled by default. |
+| [Condition](https://www.hl7.org/fhir/R4/condition.html) (Problems)                    | [US Core Condition Problems Health Concerns](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-condition-problems-health-concerns.html) | Includes all historical problems, not just what is on Connective Health’s patient summary template.                                                                                                  |
+| [Procedure](https://www.hl7.org/fhir/R4/procedure.html)                               | [US Core Procedure](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-procedure.html)                                                   | Based on Connective Health's patient summary template. Includes reference to encounter.                                                                                                              |
+| [Observation](https://www.hl7.org/fhir/R4/observation.html)                           | [US Core Vital Signs](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-vital-signs.html)                                               | Includes all historical values of only the vital signs listed below.                                                                                                                                 |
+| [Observation](https://www.hl7.org/fhir/R4/observation.html)                           | [US Core BMI](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-bmi.html)                                                               |                                                                                                                                                                                                      |
+| [Observation](https://www.hl7.org/fhir/R4/observation.html)                           | [US Core Body Height](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-body-height.html)                                               |                                                                                                                                                                                                      |
+| [Observation](https://www.hl7.org/fhir/R4/observation.html)                           | [US Core Body Temperature](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-body-temperature.html)                                     |                                                                                                                                                                                                      |
+| [Observation](https://www.hl7.org/fhir/R4/observation.html)                           | [US Core Heart Rate](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-heart-rate.html)                                                 |                                                                                                                                                                                                      |
+| [Observation](https://www.hl7.org/fhir/R4/observation.html)                           | [US Core Pulse Oximetry](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-pulse-oximetry.html)                                         |                                                                                                                                                                                                      |
+| [Observation](https://www.hl7.org/fhir/R4/observation.html)                           | [US Core Respiratory Rate](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-respiratory-rate.html)                                     |                                                                                                                                                                                                      |
+| [Practitioner](https://www.hl7.org/fhir/R4/practitioner.html)                         | [US Core Practitioner](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-practitioner.html)                                             | Only returned as a contained resource.                                                                                                                                                               |
+| [Practitioner Role](https://www.hl7.org/fhir/R4/practitionerrole.html)                | [US Core PractitionerRole](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-practitionerrole.html)                                     | Only returned as a contained resource.                                                                                                                                                               |
+| [Location](https://www.hl7.org/fhir/R4/location.html)                                 | [US Core Location](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-location.html)                                                     | Only returned as a contained resource.                                                                                                                                                               |
