PS-784: Medications Sharing
* Update intro text
* Update swagger (again)

--- a/scheduled-appointments/introduction.mdx
+++ b/scheduled-appointments/introduction.mdx
@@ -1,11 +1,11 @@
 ---
 title: 'Intro'
-description: 'Scheduled Appointments API'
+description: 'Patient Processing API'
 ---
 
 # Welcome
 
 This is the main API to be utilized when initiating patient request processing.
 
-This API is largely an asynchronous API call as patient data is not immediately returned
+This API is largely asynchronous, as patient data is not immediately returned
 to the client.
