--- a/implementation/sample-project-steps.mdx
+++ b/implementation/sample-project-steps.mdx
@@ -1,38 +1,30 @@
 ---
-title: 'Implementation Details'
-description: 'Sample implementation project guide'
-icon: 'stairs'
+title: 'Timeline'
 ---
 
-# Sample Implementation Project Steps
-
-Implementation steps may vary according to use case and integration methods elected.
+In general Connective Health is typically live in less than three months after contract signing.
+Although implementation steps may vary according to use case and integration methods elected.
 Below is a sample implementation project with what to expect when implementing
 the Connective Health Care Summary service.
 
 <Steps>
-    <Step title="Project Kick off meeting">
-        * One hour meeting for everyone to meet, discuss roles, and the work to be done
+    <Step title="Project Kickoff Meeting (within 1 wk after contract signing)">
+        * Define project team and weekly implementation meetings
+        * Setup shared Slack channel
+        * Establish success metrics
     </Step>
-    <Step title="EHR Implementation and Product Configuration">
-        * Establish Care Summary request process (Connective Health API, EHR Integration, etc.)
-        * Determine return mechanism for the Care Summary. Options include Clinical Direct Message, Fax, or Cloud delivery
-        * Finalize the clinical configurations (no technical work)
+    <Step title="Workflow Setup (within 1 month after contract signing)">
+        * Clinical workflow definition
+        * EHR/API implementation (e.g. restricted patient information sharing)
+        * Connective Health product configuration (e.g. filter settings)
     </Step>
-    <Step title="Test send of Patient Care Summaries to Clinic and Train Lead Person on Clinic">
-        * Test a sample set of patients via API or a manually loaded set of patients. Return Care Summaries either via agreed upon response method
-        * Train lead person in each clinic on the content, the sources, how data is associated
+    <Step title="Launch Process (within 1.5 months after contract signing)">
+        * Test sending medical records to Clinic
+        * Training sessions
+        * Product Go-Live
+        * Initial feedback and report out Discussion
     </Step>
-    <Step title="Centralized Training Sessions and Product Go-Live">
-        * Centralized training on the service with materials and live discussions
-        * Turn the product live
-    </Step>
-    <Step title="Initial Report Out Discussion">
-        * Review first few weeks of the service
-        * Review clinical content to make any necessary configuration tweaks necessary
-        * Validate workflow and identify any necessary improvements
-    </Step>
-    <Step title="Clinic Check-ins and working through data source issues">
+    <Step title="Clinic Check-ins and working through data source issues (ongoing)">
         * Set series of follow on meeting to discuss the service
         * Connective will work through data source issues
     </Step>
