--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,9 +1,8 @@
 ---
 title: Introduction
+icon: 'play'
 description: 'Welcome to the Connective Health documentation site'
 ---
 
 This site contains all the information needed to work with Connective Health's products
 and technology. We encourage you to contact us if you have any questions!
-
-<img src="images/patient-with-child.jpeg" alt="Patient" />
