--- a/product/webhooks.mdx
+++ b/product/webhooks.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Webhooks'
-description: 'EARLY ADOPTER: Important Event Webhook Callbacks'
+description: 'Important Event Webhook Callbacks'
 icon: 'webhook'
 ---
 
@@ -31,17 +31,17 @@ is optional, but if specified will contain additional information specific to th
 }
 ```
 
-# Webhooks
+# Implementation
 
 ## Event Types
 
 Please contact your account manager if there are other event types you would like to see supported.
 
-| Event Type                  | Status    | Description                                                                                                                                                   |
-|-----------------------------|-----------|---------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| `patient.insufficientData`  | Available | This event may be due to several issues including the patient not being found or there not being sufficient data for the patient for the data to be delivered |
-| `patient.found`             | Coming    | The patient was identified via one of our connected networks                                                                                                  |
-| `document.deliveryComplete` | Coming    | A document (either PDF or FHIR bundle) was successfully delivered                                                                                             |
+| Event Type                  | Status      | Description                                                                                                                                                   |
+|-----------------------------|-------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| `patient.insufficientData`  | Available   | This event may be due to several issues including the patient not being found or there not being sufficient data for the patient for the data to be delivered |
+| `patient.found`             | Coming soon | The patient was identified via one of our connected networks                                                                                                  |
+| `document.deliveryComplete` | Coming soon | A document (either PDF or FHIR bundle) was successfully delivered                                                                                             |
 
 
 ## Security
