--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -11,6 +11,10 @@ These are the APIs to be utilized when initiating patient processing.
 These APIs are largely asynchronous, as patient data is not immediately returned
 to the client. Please contact Connective Health if you have any questions.
 
+## OpenAPI Specification
+
+Our full OpenAPI specification can be found on [GitHub](https://github.com/connective-health/public-docs/blob/main/patient-appointment-api.yml).
+
 # Security
 
 ## Overview
