PS-1011: Pilot Process update

--- a/implementation/pilot-process.mdx
+++ b/implementation/pilot-process.mdx
@@ -7,25 +7,27 @@ icon: 'paper-plane'
 # Objective
 The primary objective of this Proof of Concept is to showcase how the Connective Health Care Summary can address key challenges and enhance operational efficiency in your care delivery. Through a controlled and focused implementation, we aim to provide tangible evidence of the product's capabilities in improving user experience, patient care, and workflow efficiency.
 
-# High Level Steps
+# High-Level Steps
 
 <Steps>
     <Step title="Complete contract / BAA">
         * Execute a no fees contract and BAA for the period of the Proof of Concept
     </Step>
-    <Step title="Define PoC team">
-        * Customer is required to have a project lead, clinical participant, and technical participant included in subsequent PoC discussions
-        * Establish timeline and subsequent Review of Results 1 hour discussion (suggest 7 days following receipt of information)
+    <Step title="Set up Proof of Concept">
+        * Designate a project lead, clinical participant, and technical participant to be included in Proof of Concept discussions
+        * Establish timeline and schedule a one-hour Review of Results discussion (suggest seven days following receipt of information)
+        * Validate pilot measures for success
+        * Establish mechanism for secure exchange of patient demographics and delivery of medical summaries
+            * Use of secure email and Excel templates is most common
+            * SFTP, S3/GCS are also available
     </Step>
-    <Step title="Patient Population Selection">
-        * Project lead partners with Connective Health to identify a representative mix of patients and appropriate size for the PoC
-        * Customer to provide demographics according to template provided
+    <Step title="Execute Proof of Concept">
+        * Customer provides Connective Health with demographics of the patient population according to template provided
+        * Within two business days, Connective Health retrieves and consolidates medical documents, then delivers to customer securely via mechanism established during setup
+        * Connective Health also provides a complimentary data analysis, e.g. risk adjustment suspecting, quality gap closure, out-of-network specialist utilization, etc.
     </Step>
-    <Step title="Workflow and clinical discussions">
-        * Connective Health partner with technical contact to review existing workflow
-        * Connective Health clinical team to connect with customer clinical team to define clinical priorities ahead of analysis and read out
-    </Step>
-    <Step title="Review of Results">
-        * Group discussion to review findings and analyses
+    <Step title="Review Results">
+        * Group discussion to review findings and analysis within two weeks
+        * On-site if possible
     </Step>
 </Steps>
